Changelog:

Version 0.99.9.9

Version 0.99.9.8
 - Fix Wrong asigned BigOb for Alloy/DroneMedikit
 - Fix Smokelauncher righthandedness for Drones/Tanks
 - Fix POLAR maps no connection to UFO
 - Fix Docked Ship mission stairs to be destructable
 - Fix PORT maps pier be destructable
 - Fix minor error with Alien Proxie Grenade BigOb
 - Fix minor error with Alloy Tank ufopaedia article order
 - Fix JUNGLEMOUNTAIN deployment terrain and the stupid bushes
 - Fix ALIEN BASE maps equipment pile spawning on Elevator
 - Fix Aliens being able to spawn in other Xcom Base modules then Hangars and Access Lift
 - Fix wrong materials for Hoverdrone/Adv. Medikit repair cost
 - Fix Hitanimations for Melee Weapons only showing 4 frames instaead of 8 (THX pWWa)
 - Fix Script for Selfpopping Lids/Spitterlids not working correctly (THX crazedHarpooner)
 - Fix Secondary Ufopaedia Fake Page Weapons appearing in Craft Equipment Screen and New Battle
 - Adjust Tank to behave like Tanks (they now can take some abuse for 2-3 turns)
 - Adjust Terrorunits in regard of floatheight and damage resistance
 - Adjust PSI Defense for some Terrorunits and some other enemies
 - Adjust Drone Medikits are twice effective then normal ones (e.g.: max 12HP per fatal wound can be restored)
 - Adjust HWP Rocket Clipsize and Damage slightly (for Tank/Rocket Launcher and Alloytank/Rocketlauncher)
 - Adjust Missions from Interrogating Alive Alien Ranks: Navigator, Engineer no longerhave a limit of 2 per month. You have been warned!
 - Adjust Shotguns Chokes/Spread to make hits more logical
 - Adjust Alien Weaponry will now slowly transition from Green Plasma Clips to Golden Plasma Clips on all UFO's/Bases.
 - Adjust make 2 Skyrangers / 1 Interceptor the starting default
 - Add Flare launcher to Scout Drones for night missions (deploys Electroflares)
 - Add Shotguns Ammo looses power when shooting out of maxRange
 - Add Trigger for LABSHIP appereance after Alien Containment is build in any Xcom base