@@ -148,6 +148,16 @@ en-US:
   STR_NEWS_22_UFOPEDIA: "* Chinese prime minister main suspect in corruption scandal over coverup of supposedly black operations. Public demonstrations demand end of political purges in china and imprisonment of current prime minister.{NEWLINE}* London - Comex gold stock revealed overdrawing gold certificates by a margin of 1 once to 100 lenders, gold price surges within hours by 300%.{NEWLINE}* India - local farmers discover yet unknown agressive plants within their fields which destroyed large portion of their harvest. Scientist suspect alien origin.{NEWLINE}* NASA and ESA mars explorer reaches mars orbit successfully, after intial start of surface survey Houston reports technical difficulties.{NEWLINE} * Gigantic, hulking red creatures suspected of crushing public train depot near Amsterdam. Survivors report the giants seem to be totally out of control in a maze of rage."
 #END NEWS
 
+#BEGIN FACILITIES
+  STR_ALIEN_CONTAINMENT_UFOPEDIA: "Living aliens are likely to require a special habitat to maintain their life systems. The containment facility can keep up to 10 alien life forms in self-contained units. We need alien materials to construct this facility.{NEWLINE}{NEWLINE}Needed Alien Construction Materials:{NEWLINE} * ALIEN ALLOYS: 30{NEWLINE} * ALIEN FOOD: 10{NEWLINE} * MINDPROBE: 1"
+  STR_PLASMA_DEFENSES_UFOPEDIA: "Plasma beam defenses provide powerful and efficient protection against incursion by hostile craft. We need alien materials to construct this facility.{NEWLINE}{NEWLINE}Needed Alien Construction Materials:{NEWLINE} * ALIEN ALLOYS: 40{NEWLINE} * ElERIUM-115: 20{NEWLINE} * UFO POWER SOURCE: 1"
+  STR_FUSION_BALL_DEFENSES_UFOPEDIA: "Fusion missiles provide the most effective defense against alien attacks. These missiles create an anti-matter implosion which destroys everything within a specific radius. We need alien materials to construct this facility.{NEWLINE}{NEWLINE}Needed Alien Construction Materials:{NEWLINE} * ALIEN ALLOYS: 60{NEWLINE} * ElERIUM-115: 30{NEWLINE} * UFO POWER SOURCE: 1"
+  STR_GRAV_SHIELD_UFOPEDIA: "The Gravity shield repels alien craft attempting to land near the base long enough for all defense systems to fire again. In practice this will double the effectiveness of any defense systems at your base. We need alien materials to construct this facility.{NEWLINE}{NEWLINE}Needed Alien Construction Materials:{NEWLINE} * ALIEN ALLOYS: 100{NEWLINE} * ElERIUM-115: 50{NEWLINE} * UFO POWER SOURCE: 4"
+  STR_MIND_SHIELD_UFOPEDIA: "Since alien craft rely on brain waves to detect human presence then the most effective counter measure is to shield brain waves from the base. This facility will drastically reduce the chances of detection by alien craft. We need alien materials to construct this facility.{NEWLINE}{NEWLINE}Needed Alien Construction Materials:{NEWLINE} * ALIEN ALLOYS: 100{NEWLINE} * ElERIUM-115: 50{NEWLINE} * UFO POWER SOURCE: 4"
+  STR_PSIONIC_LABORATORY_UFOPEDIA: "The psionics lab can assess the psionic potential of all soldiers at the base and give them the necessary training to utilize their psionic skills. Each lab can train up to ten soldiers. Training is allocated at the end of each month. Psionic skills used in conjunction with a Psi-amp can be used for psionic attacks during combat. We need alien materials to construct this facility.{NEWLINE}{NEWLINE}Needed Alien Construction Materials:{NEWLINE} * ALIEN ALLOYS: 100{NEWLINE} * MIND PROBE: 2{NEWLINE} * UFO NAVIGATION: 2"
+  STR_HYPER_WAVE_DECODER_UFOPEDIA: "Alien communications rely on a supra-dimensional wave which travels almost instantaneously. The decoder facility intercepts UFO transmissions and decodes the information. This will show the type of UFO, the alien race and the type of activity. We need alien materials to construct this facility.{NEWLINE}{NEWLINE}Needed Alien Construction Materials:{NEWLINE} * ALIEN ALLOYS: 60{NEWLINE} * ELERIUM-115:: 30{NEWLINE} * UFO NAVIGATION: 4"
+#END FACILITIES
+
 #BEGIN CRAFTS
   STR_IMPROVED_SKYRANGER: "Improved Skyranger"
   STR_SKYSTRIKER: "SKYSTRIKER"
